force-app/main/default/objects/PropertyDELETE__c/PropertyDELETE__c.object-meta.xml
<CustomObject>
    <label>Property(DELETE)</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>