force-app/main/default/objects/PropertyDELETE__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building</label>
    <referenceTo>PropertyDELETE__c</referenceTo>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>