force-app/main/default/objects/PropertyDELETE__c/fields/Selling_Agent__c.field-meta.xml
<CustomField>
    <fullName>Selling_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selling Agent</label>
    <referenceTo>Realtor__c</referenceTo>
    <relationshipName>Property</relationshipName>
    <type>Lookup</type>
</CustomField>